[gd_scene load_steps=19 format=2]

[ext_resource path="res://assets/font/ArialCE.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/theme/leaderboardBackground.tres" type="Texture" id=2]
[ext_resource path="res://avatars/avatar_1/idle/1.png" type="Texture" id=3]
[ext_resource path="res://avatars/avatar_2/down/C1 F1.png" type="Texture" id=4]
[ext_resource path="res://AvatarSelectionPage/AvatarSelection.gd" type="Script" id=5]
[ext_resource path="res://assets/theme/non_select_button_theme.tres" type="StyleBox" id=6]
[ext_resource path="res://assets/theme/select_button_theme.tres" type="StyleBox" id=7]
[ext_resource path="res://AvatarSelectionPage/Avatar1.gd" type="Script" id=8]
[ext_resource path="res://assets/font/AvatarSelectionBigTitle.tres" type="DynamicFont" id=9]
[ext_resource path="res://assets/font/RegisterPageErrorPopup.tres" type="DynamicFont" id=10]
[ext_resource path="res://AvatarSelectionPage/Avatar4.gd" type="Script" id=12]
[ext_resource path="res://AvatarSelectionPage/Avatar2.gd" type="Script" id=13]
[ext_resource path="res://AvatarSelectionPage/Avatar5.gd" type="Script" id=14]
[ext_resource path="res://AvatarSelectionPage/Avatar3.gd" type="Script" id=15]
[ext_resource path="res://avatars/avatar_3_4/C3 F4.png" type="Texture" id=18]
[ext_resource path="res://avatars/avatar_3_4/C4 F1.png" type="Texture" id=19]
[ext_resource path="res://avatars/avatar_3_4/C2 F1.png" type="Texture" id=20]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 1
outline_color = Color( 0.0627451, 0.00392157, 0.00392157, 1 )
use_filter = true
font_data = ExtResource( 1 )

[node name="AvatarSelection" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="NinePatchRect"]
margin_left = 324.621
margin_top = 128.532
margin_right = 730.621
margin_bottom = 208.532
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Select an avatar"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Avatar1" type="TextureButton" parent="NinePatchRect"]
margin_left = 80.0
margin_top = 192.0
margin_right = 302.0
margin_bottom = 466.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )
texture_disabled = ExtResource( 3 )
texture_focused = ExtResource( 3 )
expand = true
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Avatar2" type="TextureButton" parent="NinePatchRect"]
margin_left = 288.0
margin_top = 256.0
margin_right = 446.0
margin_bottom = 412.0
toggle_mode = true
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 4 )
texture_focused = ExtResource( 4 )
expand = true
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Avatar3" type="TextureButton" parent="NinePatchRect"]
margin_left = 448.0
margin_top = 256.0
margin_right = 600.0
margin_bottom = 412.0
texture_normal = ExtResource( 18 )
texture_pressed = ExtResource( 18 )
texture_hover = ExtResource( 18 )
texture_disabled = ExtResource( 18 )
texture_focused = ExtResource( 18 )
expand = true
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Avatar4" type="TextureButton" parent="NinePatchRect"]
margin_left = 608.0
margin_top = 256.0
margin_right = 749.0
margin_bottom = 416.0
texture_normal = ExtResource( 19 )
texture_pressed = ExtResource( 19 )
texture_hover = ExtResource( 19 )
texture_disabled = ExtResource( 19 )
texture_focused = ExtResource( 19 )
expand = true
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Avatar5" type="TextureButton" parent="NinePatchRect"]
margin_left = 752.0
margin_top = 248.0
margin_right = 920.0
margin_bottom = 420.0
texture_normal = ExtResource( 20 )
texture_pressed = ExtResource( 20 )
texture_hover = ExtResource( 20 )
texture_disabled = ExtResource( 20 )
texture_focused = ExtResource( 20 )
expand = true
script = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextButton" type="Button" parent="NinePatchRect"]
margin_left = 402.837
margin_top = 483.881
margin_right = 633.837
margin_bottom = 558.881
custom_styles/pressed = ExtResource( 7 )
custom_styles/focus = ExtResource( 7 )
custom_styles/normal = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="NinePatchRect/NextButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Next"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Avatar1Selected" type="Popup" parent="."]
visible = true
margin_left = 136.0
margin_top = 408.0
margin_right = 266.0
margin_bottom = 448.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Avatar1Selected"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Selected"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Avatar2Selected" type="Popup" parent="."]
visible = true
margin_left = 304.0
margin_top = 408.0
margin_right = 434.0
margin_bottom = 448.0
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Avatar2Selected"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Selected"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Avatar3Selected" type="Popup" parent="."]
visible = true
margin_left = 456.0
margin_top = 408.0
margin_right = 586.0
margin_bottom = 448.0
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Avatar3Selected"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Selected"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Avatar4Selected" type="Popup" parent="."]
visible = true
margin_left = 616.0
margin_top = 408.0
margin_right = 746.0
margin_bottom = 448.0
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Avatar4Selected"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Selected"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Avatar5Selected" type="Popup" parent="."]
visible = true
margin_left = 776.0
margin_top = 408.0
margin_right = 906.0
margin_bottom = 448.0
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Avatar5Selected"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Selected"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPAvatar" type="HTTPRequest" parent="."]
[connection signal="pressed" from="NinePatchRect/NextButton" to="." method="_on_NextButton_pressed"]
[connection signal="request_completed" from="HTTPAvatar" to="." method="_on_HTTPAvatar_request_completed"]
